# chileCompraApp

./: .gitignore  _inspect_schema.py  conftest.py  ejemplo_cli.md  funcionesAthenaMetadata.py  funcionesAws.py  funcionesNeo4j.py  funcionesNeo4jEC2.py  funcionesPgEC2.py  funcionesString.py  funcionesUploadNeo4j.py  iniciador.py  kumorfm_script.py  kumorfm_script_2.py  neo4j-key-pair.pem  pyproject.toml  regiones_chile.json  requirements.txt  scrape_actas.py  script_0_create_aws_and_neo4j_instance.py  script_1_genera_json_productos.py  script_2_group_similar_products.py  script_analisis_promedon.py  script_analisis_promedon_2.py  script_analisis_promedon_3.py  script_analisis_promedon_v2.py  script_genera_csv_neo4j.py  script_genera_csv_neo4j_query.py  script_genera_json_productos.py  script_genera_kg_aws.py  script_genera_productos_csv_neo4j.py  script_genera_rubros_onu.py  unspcs-clasificador-de-bienes-y-servicios-de-naciones-unidas-en-espanol.xlsx
.claude/: settings.local.json
chilecompra_er/: README.md  __init__.py  ambiguity.py  brands.py  cli.py  coherence.py  config.py  devtools.py  fallback.py  graphdb.py  llm.py  mcp_neo4j_launch.py  pipeline.py  profiling.py  progress.py  register.py  strawman.py  widen.py
data/: convenios_marco.csv  grupos_productos_genericos.jsonl  productos_estructurados.json  productos_genericos.jsonl  proveedores_convenios_marco.csv
docs/: item_centric_plan.md  offer_aware_resolution.md
examples/: count_candidates.py  curation_20260613.py  curation_m1_20260613.py  fix_and_report_schemas.py  generate_schemas.py  price_series.py  (+6 more)
(+322 files in other folders)
